# coldcamera

./: .gitignore  LICENSE  build.spec  pyproject.toml  requirements.txt
.github/workflows/: build.yml
application/: enums.py  exceptions.py  types.py  window.py
application/classes/: effect.py  layout.py  parameter.py  parameters_manager.py  pipeline.py  register.py  shader_processor.py  video_provider.py
application/effects/: chromatic_abberation.py  contrast_brightness.py  exposure.py  ghosting.py  glow.py  noise.py  rescale.py  warmth.py
application/utils/: local_path.py  resource_path.py
application/widgets/: effect.py  effect_popup.py  effects_list.py  viewport.py
coldcamera/: config.py  exceptions.py  types.py  window.py
coldcamera/classes/: __init__.py  effect.py  layout.py  parameter.py  parameters_manager.py  pipeline.py  register.py  shader_processor.py  video_provider.py
coldcamera/classes/layout/: __init__.py  base.py  button.py  checkbox.py  dropdown.py  group.py  layout.py  separator.py  slider.py  spinbox.py  types.py
coldcamera/effects/: __init__.py  blur.py  ccd_smear.py  chromatic_abberation.py  contrast_brightness.py  film_grain.py  ghosting.py  glow.py  hue.py  jpeg_damage.py  register.py  rescale.py  sharpen.py  vibrance.py  warmth.py
coldcamera/effects/includes/: blur.py  ccd_smear.py  chromatic_abberation.py  contrast_brightness.py  exposure.py  film_grain.py  ghosting.py  glow.py  hue.py  jpeg_damage.py  noise.py  rescale.py  s_chorus.py  s_delay.py  s_distortion.py  s_highpass.py  s_limiter.py  s_lowpass.py  s_phaser.py  s_reverb.py  sharpen.py  vibrance.py  warmth.py
coldcamera/utils/: add_alpha_channel.py  sonarify_image.py
coldcamera/widgets/: editable_label.py  effect.py  pipeline.py  viewport.py
